<resources>
    <string name="app_name">VideoGameList</string>
    <string name="display_edit_btn_text">Edit</string>
    <string name="display_delete_btn_text">Delete</string>
    <string name="edit_frag_title_text">New Game</string>
    <string name="edit_name_label">Video Game Name</string>
    <string name="edit_name_hint">Game Name</string>
    <string name="edit_price_label">Game Price</string>
    <string name="edit_price_hint">19.99</string>
    <string name="add_console">Add Console</string>
    <string name="select_consoles">Select Consoles</string>
    <string name="console_list_label_text">Consoles:</string>
    <string name="add_console_dismiss_btn_text">Dismiss</string>
    <string name="add_console_submit_btn_text">Submit</string>
    <string name="add_console_label">Console Name</string>
    <string name="add_console_hint">Console</string>
    <string name="add_console_instructions">Please add consoles one at a time.</string>
    <string name="add_console_title">Add a Console</string>
    <string name="not_valid_new_console">Please enter a valid console name</string>
    <string name="not_valid_new_game">Please ensure that you have a name and at least one console selected before submitting</string>
    <string name="add_new_game_item_txt">Add new game</string>
    <string name="no_games_text">No games here</string>
    <string name="favorites_chip_text">Favorites</string>
    <string name="display_favorite_button_alt_text">Favorite Button</string>
    <string name="edit_favorite_btn_text">Favorite</string>
    <string name="save_to_device_item_txt">Save to device</string>
    <string name="save_to_cloud_item_txt">Save to cloud</string>
    <string name="about_page_item_txt">About page</string>
    <string name="display_menu_txt">Menu</string>
    <string name="about_info_txt">Created by Emily Granville

        \n\nTo create a new video game item upon starting the app, please click the menu button at
        the bottom and select the option to add a game.

        \n\nPlease be aware that because you have the option to save either to the cloud or to your
        personal device, adding, deleting, or editing games does not automatically save. You
        must save manually either to your device or to the cloud each time if you wish to save
        that information.

        \n\nOn loading, the app automatically loads the data saved to the device. To see the
        information saved to the cloud, please select that button from the menu.</string>
    <string name="return_btn_txt">Return to display page</string>
    <string name="load_device_item_txt">Load from device (default)</string>
    <string name="load_cloud_item_txt">Load from cloud</string>
    <string name="sign_email_hint">Enter Email Here</string>
    <string name="sign_email_placeholder">example@email.com</string>
    <string name="sign_password_hint">Enter Password Here</string>
    <string name="sign_password_placeholder">password</string>
    <string name="signup_txt">Sign Up</string>
    <string name="confirm_action_txt">Please confirm action below.</string>
    <string name="confirm_action_save_cloud_txt">Please confirm action below. Saving to cloud
        will overwrite any data currently stored there.</string>
    <string name="confirm_action_save_locally_txt">Please confirm action below. Saving to device
        will overwrite any data currently stored there.</string>
    <string name="confirm_btn_txt">Confirm</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="signin_txt">Sign In</string>
    <string name="signout_btn_txt">Sign Out</string>
    <string name="delete_account_btn_txt">Delete Account</string>
    <string name="new_pw_txt">Enter New Password</string>
    <string name="account_management_page_item_txt">Account Management Page</string>
    <string name="try_again_txt">Attempt unsuccessful. Please try again later.</string>
    <string name="success">Success.</string>
    <string name="change_password_txt">Change Password</string>
    <string name="confirm_acc_txt">Confirm Account</string>
    <string name="reset_password_txt">Reset Password</string>
    <string name="send_pw_reset_email_txt">Send Email</string>
    <string name="enter_new_pw_txt">Enter New Password</string>
    <string name="pw_reset_email_sent_txt">Password reset email sent.</string>
    <string name="pw_updated_txt">Password updated.</string>
    <string name="account_deleted_txt">Account deleted.</string>
    <string name="saved_to_device">Successfully saved to device.</string>
    <string name="saved_to_cloud">Successfully saved to cloud.</string>
    <string name="loaded_from_cloud">Successfully loaded from cloud.</string>
</resources>