<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AccountManagementVGView" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/am_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_txt"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_txt"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_change_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_txt"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_password_reset_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_txt"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_signout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout_btn_txt"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_delete_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_btn_txt"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/am_return_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_btn_txt"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>